--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,18 @@ find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
 include_directories("${CMAKE_SOURCE_DIR}/include/")
 
 add_executable(WordGame
+    # Add headers
+    ${CMAKE_SOURCE_DIR}/include/item.hpp
+    ${CMAKE_SOURCE_DIR}/include/multipliers.hpp
+    ${CMAKE_SOURCE_DIR}/include/renderoptions.hpp
+    ${CMAKE_SOURCE_DIR}/include/tools.hpp
+     
+    # Add class and function definitions
+    ${CMAKE_SOURCE_DIR}/src/table.cpp ${CMAKE_SOURCE_DIR}/include/table.hpp
+    ${CMAKE_SOURCE_DIR}/src/render.cpp ${CMAKE_SOURCE_DIR}/include/render.hpp
+    ${CMAKE_SOURCE_DIR}/src/rendertable.cpp ${CMAKE_SOURCE_DIR}/include/rendertable.hpp
+
+    # Add main (entry point)
     ${CMAKE_SOURCE_DIR}/src/main.cpp
 )
 
