--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,61 @@
 cmake_minimum_required(VERSION 3.1)
+
+# Temporary, these should be default arguments
+set(WordGame_Build_TestClient FALSE)
+set(WordGame_Build_TestServer FALSE)
+cmake_policy(SET CMP0074 NEW) # Something about _ROOT
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+message("Building in debug mode.")
+set(WORDGAME_DEBUG 1)
+set(WORDGAME_RELEASE 0)
+elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
+message("Building in release mode.")
+set(WORDGAME_DEBUG 0)
+set(WORDGAME_RELEASE 1)
+endif()
+
+# Declare our projects
 project(WordGame LANGUAGES CXX)
-
+if(WordGame_Build_TestClient)
 project(TestClient LANGUAGES CXX)
+endif()
+if(WordGame_Build_TestServer)
 project(TestServer LANGUAGES CXX)
+endif()
 
+# Set up our build settings
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(JSON_BuildTests OFF CACHE INTERNAL "")
-set(WordGame_Build_TestClient FALSE)
-set(WordGame_Build_TestServer FALSE)
 
+if (APPLE)
 add_definitions(-g -stdlib=libc++)
+elseif (WIN32)
+#add_compile_definitions(_WIN32_WINNT=0x0601)
+add_compile_definitions(_WIN32_WINNT=0x0A00)
+endif()
 
-find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
+if (WORDGAME_RELEASE)
+set(SFML_STATIC_LIBRARIES TRUE)
+set(WORDGAME_STATIC_BOOST TRUE)
+endif ()
+if (WORDGAME_STATIC_BOOST)
+set(Boost_USE_STATIC_LIBS ON)
+endif ()
+
+# Find our libraries
+find_package(SFML 2.5 COMPONENTS graphics window system REQUIRED)
 find_package(Boost 1.71 COMPONENTS program_options REQUIRED)
 find_package(Threads)
 add_subdirectory(include/deps/nlohmann_json)
 
+# Add include directories
 include_directories("${CMAKE_SOURCE_DIR}/include/")
 include_directories("${CMAKE_SOURCE_DIR}/src/web/")
-include_directories(${Boost_INCLUDE_DIR})
+include_directories(SYSTEM ${Boost_INCLUDE_DIR})
 
+# Build the application
 add_executable(WordGame
     # Add headers
     ${CMAKE_SOURCE_DIR}/include/game/item.hpp
@@ -54,6 +89,14 @@ add_executable(WordGame
     ${CMAKE_SOURCE_DIR}/src/main.cpp
 )
 
+if(WORDGAME_RELEASE)
+#target_compile_options(WordGame PUBLIC /MT)
+#target_link_options(WordGame PUBLIC /INCREMENTAL:NO /NODEFAULTLIB:MSVCRT)
+message("Adding boost library directory: " ${Boost_LIBRARY_DIR})
+#link_directories(${Boost_LIBRARY_DIR})
+endif()
+
+# Link the application
 target_link_libraries(WordGame PUBLIC sfml-graphics)
 target_link_libraries(WordGame PRIVATE nlohmann_json::nlohmann_json)
 target_link_libraries(WordGame PUBLIC ${CMAKE_THREAD_LIBS_INIT})
